tests/fixtures/invalid/err004_missing_alias.rex
observe page "https://example.com"
